--- a/net/templates/events_widget.html
+++ b/net/templates/events_widget.html
@@ -1,10 +1,10 @@
 {% load thumbnail i18n method %}
 	
 <div class="b-block b-wall">
-		<div class="corner-left"></div>
-		<div class="corner-right"></div>
-			<div class="corner-left bottom"></div>
-			<div class="corner-right bottom"></div>
+		<div class="corner corner-left"></div>
+		<div class="corner corner-right"></div>
+			<div class="corner corner-left-bottom"></div>
+			<div class="corner corner-right-bottom"></div>
 {% if widgets.events %}
     <h1 class="header">{% trans "События" %}</h1>
 
