--- a/net/templates/paginator.html
+++ b/net/templates/paginator.html
@@ -1,10 +1,10 @@
 {% load i18n net %}
 {% if page_obj.has_other_pages %}
 <div class="b-block paginator">
-		<div class="corner-left"></div>
-		<div class="corner-right"></div>
-			<div class="corner-left bottom"></div>
-			<div class="corner-right bottom"></div>
+		<div class="corner corner-left"></div>
+		<div class="corner corner-right"></div>
+			<div class="corner corner-left-bottom"></div>
+			<div class="corner corner-right-bottom"></div>
 <ul>
 
     {% if page_obj.has_previous %}
