--- a/media/css/ru/footer.css
+++ b/media/css/ru/footer.css
@@ -4,7 +4,7 @@
             border-top: solid 1px #e1e1e1;
             padding: 20px 0;
             margin-top: 20px;
-            float: left; display: inline; display: inline;
+            float: left; display: inline;
             margin-top: 20px;
             font-size: 0.9em;
             background: #fff;
