--- a/net/templates/groups.html
+++ b/net/templates/groups.html
@@ -6,10 +6,10 @@
   
 		<div class="b-wide-left-column">
 		<div class="b-block" >
-		<div class="corner-left"></div>
-		<div class="corner-right"></div>
-		<div class="corner-left bottom"></div>
-		<div class="corner-right bottom"></div>
+		<div class="corner corner-left"></div>
+		<div class="corner corner-right"></div>
+		<div class="corner corner-left-bottom"></div>
+		<div class="corner corner-right-bottom"></div>
 		<div class="b-users-list">
 				
 {% if object_list %}
