--- a/net/templates/photos_widget.html
+++ b/net/templates/photos_widget.html
@@ -1,10 +1,10 @@
 {% load thumbnail i18n %}
 {% if widgets.photos %}
 	<div class="b-block b-photos">
-					<div class="corner-left"></div>
-					<div class="corner-right"></div>
-						<div class="corner-left bottom"></div>
-						<div class="corner-right bottom"></div>
+					<div class="corner corner-left"></div>
+					<div class="corner corner-right"></div>
+						<div class="corner corner-left-bottom"></div>
+						<div class="corner corner-right-bottom"></div>
 		<h1 class="header">
 			{% trans "Фотографии" %}
 			{% if widgets.photos.photos_count %} 
@@ -21,10 +21,10 @@
         {% else %}
 {% ifequal profile.user.pk request.user.pk %}
 	<div class="b-block b-photos">
-			<div class="corner-left"></div>
-			<div class="corner-right"></div>
-				<div class="corner-left bottom"></div>
-				<div class="corner-right bottom"></div>
+			<div class="corner corner-left"></div>
+			<div class="corner corner-right"></div>
+				<div class="corner corner-left-bottom"></div>
+				<div class="corner corner-right-bottom"></div>
 <h1 class="header"><a href="{% url create_photo %}">{% trans "Загрузите фотографии" %}</a></h1>
 </div>
 {% endifequal %}
