--- a/net/templates/users.html
+++ b/net/templates/users.html
@@ -3,10 +3,10 @@
     {% block content %}
         	<div class="b-wide-left-column">
 	<div class="b-block" >
-			<div class="corner-left"></div>
-			<div class="corner-right"></div>
-			<div class="corner-left bottom"></div>
-			<div class="corner-right bottom"></div>
+			<div class="corner corner-left"></div>
+			<div class="corner corner-right"></div>
+			<div class="corner corner-left-bottom"></div>
+			<div class="corner corner-right-bottom"></div>
 			<div class="b-users-list">
 						{% if object_list %}
         {% for user in object_list %}
@@ -34,10 +34,10 @@
        
 	<div class="b-left-column" style="margin-left: 20px">
 			<div class="b-block b-friends">
-				<div class="corner-left"></div>
-				<div class="corner-right"></div>
-					<div class="corner-left bottom"></div>
-					<div class="corner-right bottom"></div>
+				<div class="corner corner-left"></div>
+				<div class="corner corner-right"></div>
+					<div class="corner corner-left-bottom"></div>
+					<div class="corner corner-right-bottom"></div>
 		<form action="{% url user_search %}" class="b-place-form" style="width: auto; padding-bottom: 20px" method="post">
 		    {{ form.as_p }}
 		    <input type="submit" value="{% trans "Найти" %}"/>
