--- a/net/templates/wall_messages.html
+++ b/net/templates/wall_messages.html
@@ -8,10 +8,10 @@
 </div>
 <div class="b-right-column">
 			<div class="b-block b-wall" >
-				<div class="corner-left"></div>
-				<div class="corner-right"></div>
-					<div class="corner-left bottom"></div>
-					<div class="corner-right bottom"></div>
+				<div class="corner corner-left"></div>
+				<div class="corner corner-right"></div>
+					<div class="corner corner-left-bottom"></div>
+					<div class="corner corner-right-bottom"></div>
 				<h1 class="header">
 				    {% ifequal msg_type "outbox" %}{% trans 'Outbox' %}{% endifequal %}
 				    {% ifequal msg_type "inbox" %}{% trans 'Inbox' %}{% endifequal %}
