--- a/net/templates/edit_place.html
+++ b/net/templates/edit_place.html
@@ -3,7 +3,7 @@
     {% block content %}
 	<div class="b-place-form"  style="height: 270px" id="write-smth">
        
-            <form action="." method="post" enctype="multipart/form-data">
+            <form action="{% url add_user_place %}" method="post" enctype="multipart/form-data">
                 <div class="b-fields-group main-fields">
                     {{ form.as_p }}
 <!-- 
