places editing fix

--- a/net/templates/profile_include.html
+++ b/net/templates/profile_include.html
@@ -59,7 +59,7 @@
                                             {% endfor %}
                                         {% endif %}
                                         {% ifequal profile request.user.user %}
-                                            <a class="wrote-smth" href="{% url add_user_place %}">{% trans "Добавить место" %}</a>
+                                            <a class="wrote-smth" href="{% url add_user_place %}?ajax=1">{% trans "Добавить место" %}</a>
                                         {% endifequal %}
                                     </div>
                                     {% if profile.interest %}
