--- a/net/templates/edit_place.html
+++ b/net/templates/edit_place.html
@@ -1,8 +1,9 @@
-{{ formset.management_form }} 
+{% extends "base.html" %}
 {% load i18n %}
-    {% block content %}
-	<div class="b-place-form"  style="height: 270px" id="write-smth">
-       
+            {% block content %}
+{{ formset.management_form }}
+    <div class="b-form-container">
+        <div style="margin: 0 auto; width: 50%">
             <form action="{% url add_user_place %}" method="post" enctype="multipart/form-data">
                 <div class="b-fields-group main-fields">
                     {{ form.as_p }}
@@ -12,8 +13,9 @@
 <p>    <input type="submit" value="{% trans "Save" %}"/></p>
                 </div>
             </form>
-	
+        </div>
     </div>
-{% endblock content %}
-  
-	
+    <script>
+        geoController();
+    </script>
+ {% endblock content %}
