--- a/net/templates/registration/password_reset_complete.html
+++ b/net/templates/registration/password_reset_complete.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="b-form-container">
-        <div class="b-registration">
+        <div style="margin: 50px 50px 50px 100px">
 
 <h1>{% trans 'Password reset complete' %}</h1>
 
