--- a/contrib/django-authopenid-0.9.4/djauthaupenid_example/templates/authopenid/settings.html
+++ b/contrib/django-authopenid-0.9.4/djauthaupenid_example/templates/authopenid/settings.html
@@ -5,7 +5,7 @@
 <style type="text/css" media="screen">
 	dt, dd { padding:0 0 0.35em 0; }
 	dt { float: left; display: inline; width: 21ex;  }
-	dd { margin-left: 23ex;  }
+	dd { margin-right: 23ex;  }
 	
 	#settings-options, #settings-intro { padding: 4em 1.5em;}
 	#settings-options { min-height: 300px; border-left: 1px solid #333;}
