--- a/media/css/ar/head.css
+++ b/media/css/ar/head.css
@@ -10,7 +10,7 @@
     color: #fff;
 }
 .b-menu {
-    margin-left: 320px;
+    margin-right: 340px;
 }
 .b-menu a {
     
@@ -20,8 +20,8 @@
     
 }
 .b-setlang {
-	width: 150px; float: right; 
-	margin-left: 20px;
+	width: 150px; float: left; 
+	margin-right: 20px;
 	margin-top: -5px;
 	font-size: 0.9em;
 	color: #000;
@@ -39,7 +39,8 @@
    
 }
 .b-fast-search {
-    float: right; 
+    float: left;
+    margin-left: 20px;
     
     
 }
