--- a/media/css/ar/registration.css
+++ b/media/css/ar/registration.css
@@ -13,13 +13,14 @@ padding-bottom: 20px;
 float: right; display: inline; display: inline;
 margin: 135px 0 0 0px;
 padding: 0 50%;
+      border-right: solid 1px #e2e2e2;
 }
   .b-registration-info {
 width: 310px;
 float: right; display: inline; display: inline;
 padding-right: 50px;
-border-right: solid 1px #e2e2e2;
-margin-left: -362px;
+
+margin-right: -362px;
 }
 .b-registration-info ul {
        list-style: none;
@@ -35,7 +36,7 @@ margin-left: -362px;
     width: 600px;
 
     margin: 55px 0 0 0px;
-    margin-left: -300px;
+    margin-right: -300px;
     padding: 0 50%;
 } 
 
@@ -54,7 +55,7 @@ float: right; display: inline;
 .b-registration-form {
     float: right; display: inline; display: inline;
     width: 310px;
-    margin-left: 50px;
+    margin-right: 50px;
   
 }
 .b-login-form {
@@ -114,5 +115,5 @@ margin: 10px 0 0 5px;
     margin-bottom: 20px;
 }
 .b-signup .signup-btn {
-    margin-left: 0;
+    margin-right: 0;
 }
