--- a/net/templates/groups.html
+++ b/net/templates/groups.html
@@ -2,7 +2,7 @@
 {% load i18n interests net %}
 	{% block content %}
 
-        <a class="wrote-smth b-add-photo-block" style="margin-left: 40px" href="{% url groups_create %}">{% trans "Создать группу" %}</a>
+        <a class="wrote-smth b-add-photo-block" style="margin-right: 40px" href="{% url groups_create %}">{% trans "Создать группу" %}</a>
   
 		<div class="b-wide-left-column">
 		<div class="b-block" >
@@ -33,7 +33,7 @@
 {% endif %}
 </div></div></div>
 
-		<div class="b-left-column" style="margin-left: 20px">
+		<div class="b-left-column" style="margin-right: 20px">
 			 {% include "messages_widget.html" %}
 			{% include "friends_widget.html" %}
 			  {% include "events_widget.html" %}
