--- a/net/templates/users.html
+++ b/net/templates/users.html
@@ -32,7 +32,7 @@
        </div>
                             
        
-	<div class="b-left-column" style="margin-left: 20px">
+	<div class="b-left-column" style="margin-right: 20px">
 			<div class="b-block b-friends">
 				<div class="corner corner-left"></div>
 				<div class="corner corner-right"></div>
