--- a/net/templates/group.html
+++ b/net/templates/group.html
@@ -20,7 +20,7 @@
                         <div style="width: 50%; float: left">
               		        {% ifin request.user.user object.members.all %}
 					            {% trans "Вы участник этой группы" %}
-					            <a href="{% url groups_enter object.pk "0" %}">{% trans "Покинуть группу" %}</a>
+					            <a href="{% url groups_enter object.pk,0 %}">{% trans "Покинуть группу" %}</a>
 					            <form action="{% url groups_invite object.pk %}" method="post">
 					                <select name="user">
 					                {% for f in request.user.user.friends.all %}
