--- a/media/css/ru/base.css
+++ b/media/css/ru/base.css
@@ -163,7 +163,7 @@ table td {
 
 .b-block .header {
 	font-size: 1.5em;
-    margin-right: 20px;
+    margin-left: 20px;
 
 
 }
@@ -304,7 +304,7 @@ table td {
     
 }
 .b-message-form textarea {
-    margin-right: 20px;
+    margin-left: 20px;
     width: 400px;
     
 }
@@ -380,7 +380,7 @@ table td {
 .b-add-photo-block {
     background: #fff;
     padding: 10px;
-    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .paginator {
@@ -433,7 +433,7 @@ table td {
 .b-user {
     display: block;
     width: 90%;
-    margin-right: 20px;
+    margin-left: 20px;
     float: left; display: inline;
 }
 .b-user .medium-avatar {
