--- a/blog/templates/comments/comments_include.html
+++ b/blog/templates/comments/comments_include.html
@@ -14,7 +14,7 @@
                            {{ form.comment }}
                           </p>  <p class="submit">
                             <input type="submit" n
-ame="submit" class="submit-post" value="{% trans "Post" %}" />
+ame="submit" class="submit-post" value="{% trans "Добавить комментарий" %}" />
                           </p>
                         </form>
                     </div>
