--- a/net/templates/users.html
+++ b/net/templates/users.html
@@ -33,7 +33,7 @@
                             
        
 	<div class="b-left-column" style="margin-right: 20px">
-			<div class="b-block b-friends">
+			<div class="b-block">
 				<div class="corner corner-left"></div>
 				<div class="corner corner-right"></div>
 					<div class="corner corner-left-bottom"></div>
