--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -24,6 +24,7 @@
 		
 		{% endifnotequal %}
 		<script type="text/javascript" src="/i/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/i/js/jquery.corners.js"></script>
 		<script type="text/javascript" src="/i/js/jquery-ui.min.js"></script>
 		<script src="/i/js/thickbox-compressed.js" type="text/javascript"></script>
 		<script src="/i/js/jquery.autocomplete.js" type="text/javascript"></script>
