--- a/media/css/ar/base.css
+++ b/media/css/ar/base.css
@@ -178,7 +178,7 @@ table td {
 
 .b-wall .b-message {
 	padding-bottom: 5px;
-	float: right; display: inline;
+	display: block;
     margin: 5px 0px 10px 20px;
 	border-bottom: solid 1px #efefef;
 	width: 90%;
