--- a/net/templates/groups.html
+++ b/net/templates/groups.html
@@ -2,7 +2,7 @@
 {% load i18n interests net %}
 	{% block content %}
 
-        <a class="wrote-smth b-add-photo-block" style="margin-right: 40px" href="{% url groups_create %}">{% trans "Создать группу" %}</a>
+        <a class="wrote-smth b-add-photo-block" style="margin-left: 40px" href="{% url groups_create %}">{% trans "Создать группу" %}</a>
   
 		<div class="b-wide-left-column">
 		<div class="b-block" >
@@ -15,7 +15,7 @@
 {% if object_list %}
     {% for group in object_list %}
         	<div class="b-user">
-				<div style="margin: 20px 0 0 20px; float: left">
+				<div  class="b-user-content">
 				    <a href="{% url groups_profile group.pk %}">{{ group.name }}</a>
 					<div сlass="b-user-info-small" style="color: #c0c0c0">
 						 {% ifin request.user.user group.members.all %}
