--- a/media/css/ru/personal_info.css
+++ b/media/css/ru/personal_info.css
@@ -6,9 +6,10 @@
     
 }
 .b-userpic {
-   width: 282px;
-    padding: 20px 30px 20px 20px;
-    text-align: center;
+    width: 330px;
+    margin-top: -1px;
+    display: block;
+    padding: 2px 0px 20px 12px;
 
     background: url('/i/img/avatar_bg.jpg') top left no-repeat;
 }
