--- a/net/templates/group.html
+++ b/net/templates/group.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n interests net %}
+{% load thumbnail i18n interests net %}
     {% block profile %}
 	  <table class="b-personal-info">
             <tr>
